--- a/styles/style.css
+++ b/styles/style.css
@@ -300,7 +300,7 @@ input[type=checkbox], input[type=radio] {
 }
 
 body {
-  background: url(/assets/images/bg.jpg) no-repeat center center fixed;
+  background: url("../assets/images/bg.jpg") no-repeat center center fixed;
   font-family: "Poppins", sans-serif;
 }
 
@@ -388,7 +388,7 @@ nav .nav-container_menu ul li a:hover, nav .nav-container_menu ul li a .nav-acti
 }
 
 .icon-arrow-down {
-  background: url("/assets/images/icon-arrow-down.svg");
+  background: url("../assets/images/icon-arrow-down.svg");
   height: 30px;
   width: auto;
   display: inline-block;
@@ -466,7 +466,7 @@ nav .nav-container_menu ul li a:hover, nav .nav-container_menu ul li a .nav-acti
   font-size: 20px;
 }
 .about-me .about-me-box .about-me_image-box {
-  background: url(/assets/images/avt.png) no-repeat center center;
+  background: url("../assets/images/avt.png") no-repeat center center;
   border-radius: 20px;
   width: 400px;
   height: 500px;
