--- a/styles/animation.scss
+++ b/styles/animation.scss
@@ -66,12 +66,10 @@
 @keyframes fall-in {
   from {
     opacity: 0;
-    transform: translateY(0%);
   }
 
   to {
     opacity: 1;
-    transform: translateY(0%);
   }
 }
 
@@ -80,3 +78,34 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+@keyframes button-animation {
+  0% {
+    transform: rotate(-45deg) translateY(40%);
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+    transform: rotate(-45deg) translateY(0%);
+  }
+}
+
+@keyframes from-bot-to-top {
+  0% {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+@keyframes zoomX{
+    0%{
+        transform: scaleX(1);
+    }
+    100%{
+        transform: scale(1.1);
+    }
+}
