--- a/styles/animation.scss
+++ b/styles/animation.scss
@@ -101,11 +101,22 @@
     transform: translateY(0%);
   }
 }
-@keyframes zoomX{
-    0%{
-        transform: scaleX(1);
-    }
-    100%{
-        transform: scale(1.1);
-    }
+
+@keyframes zoomX {
+  0% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+@keyframes from-left-to-right {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translate(0%);
+  }
 }
